--- a/main.ipynb
+++ b/main.ipynb
@@ -42,8 +42,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -53,19 +55,6 @@
       "Importing Jupyter notebook from feature_generation.ipynb\n",
       "Importing Jupyter notebook from feature_selection.ipynb\n",
       "Importing Jupyter notebook from parameter_tuning.ipynb\n"
-     ]
-    },
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'predict'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-2-ac7ee8d7d919>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mfeature_generation\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mfeature_selection\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mparameter_tuning\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/nbimporter.py\u001b[0m in \u001b[0;36mload_module\u001b[0;34m(self, fullname)\u001b[0m\n\u001b[1;32m    108\u001b[0m                 \u001b[0;31m# run the code in the module\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    109\u001b[0m                 \u001b[0mcodeobj\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcompile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtree\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfilename\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'exec'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 110\u001b[0;31m                 \u001b[0mexec\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcodeobj\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmod\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__dict__\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    111\u001b[0m         \u001b[0;32mfinally\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    112\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshell\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0muser_ns\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msave_user_ns\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Facultad/Datos/TP2/datos_tp2_2c2019/parameter_tuning.ipynb\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m    \u001b[0;34m\"metadata\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m    \"source\": [\n\u001b[0;32m----> 7\u001b[0;31m     \u001b[0;34m\"# parameter_tuning\\n\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m     \u001b[0;34m\"En este notebook buscaremos los parametros optimos (aproximados, pues siempre se puede tunear mas tiempo) para los modelos elegidos para la resolucion del problema. Por tratarse de procesos costosos en tiempo, devolveremos los resultados hardcodeados para no tener que repetir el mismo.\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m    ]\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'predict'"
      ]
     }
    ],
@@ -732,168 +721,6 @@
    "outputs": [],
    "source": [
     "train_selected = feature_selection.get_selected_dataframe(train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "antiguedad\n",
-      "habitaciones\n",
-      "garages\n",
-      "banos\n",
-      "metroscubiertos\n",
-      "metrostotales\n",
-      "idzona\n",
-      "lat\n",
-      "lng\n",
-      "gimnasio\n",
-      "usosmultiples\n",
-      "piscina\n",
-      "escuelascercanas\n",
-      "centroscomercialescercanos\n",
-      "metrostotales_confiables_alt\n",
-      "metroscubiertos_alt\n",
-      "metrostotales_alt\n",
-      "metroscubiertos_i1\n",
-      "metrostotales_i1\n",
-      "metroscubiertos_alt\n",
-      "metrostotales_i2\n",
-      "tipodepropiedad_0_binary\n",
-      "tipodepropiedad_1_binary\n",
-      "tipodepropiedad_2_binary\n",
-      "tipodepropiedad_3_binary\n",
-      "intercept_pol\n",
-      "tipodepropiedad_0_pol\n",
-      "tipodepropiedad_1_pol\n",
-      "tipodepropiedad_2_pol\n",
-      "tipodepropiedad_3_pol\n",
-      "tipodepropiedad_4_pol\n",
-      "tipodepropiedad_5_pol\n",
-      "tipodepropiedad_6_pol\n",
-      "es_Distrito Federal\n",
-      "es_Edo. de México\n",
-      "es_Jalisco\n",
-      "es_Querétaro\n",
-      "es_Nuevo León\n",
-      "es_Puebla\n",
-      "es_San luis Potosí\n",
-      "es_Yucatán\n",
-      "es_Morelos\n",
-      "es_Veracruz\n",
-      "provincia_me_m0\n",
-      "ciudad_0_binary\n",
-      "ciudad_1_binary\n",
-      "ciudad_2_binary\n",
-      "ciudad_3_binary\n",
-      "ciudad_4_binary\n",
-      "ciudad_5_binary\n",
-      "ciudad_6_binary\n",
-      "ciudad_7_binary\n",
-      "ciudad_top50_1_ohe\n",
-      "ciudad_top50_2_ohe\n",
-      "ciudad_top50_3_ohe\n",
-      "ciudad_top50_4_ohe\n",
-      "ciudad_top50_5_ohe\n",
-      "ciudad_top50_6_ohe\n",
-      "ciudad_top50_7_ohe\n",
-      "ciudad_top50_8_ohe\n",
-      "ciudad_top50_9_ohe\n",
-      "ciudad_top50_10_ohe\n",
-      "ciudad_top50_11_ohe\n",
-      "ciudad_top50_12_ohe\n",
-      "ciudad_top50_13_ohe\n",
-      "ciudad_top50_14_ohe\n",
-      "ciudad_top50_15_ohe\n",
-      "ciudad_top50_16_ohe\n",
-      "ciudad_top50_17_ohe\n",
-      "ciudad_top50_18_ohe\n",
-      "ciudad_top50_19_ohe\n",
-      "ciudad_top50_20_ohe\n",
-      "ciudad_top50_21_ohe\n",
-      "ciudad_top50_22_ohe\n",
-      "ciudad_top50_23_ohe\n",
-      "ciudad_top50_24_ohe\n",
-      "ciudad_top50_25_ohe\n",
-      "ciudad_top50_26_ohe\n",
-      "ciudad_top50_27_ohe\n",
-      "ciudad_top50_28_ohe\n",
-      "ciudad_top50_29_ohe\n",
-      "ciudad_top50_30_ohe\n",
-      "ciudad_top50_31_ohe\n",
-      "ciudad_top50_32_ohe\n",
-      "ciudad_top50_33_ohe\n",
-      "ciudad_top50_34_ohe\n",
-      "ciudad_top50_35_ohe\n",
-      "ciudad_top50_36_ohe\n",
-      "ciudad_top50_37_ohe\n",
-      "ciudad_top50_38_ohe\n",
-      "ciudad_top50_39_ohe\n",
-      "ciudad_top50_40_ohe\n",
-      "ciudad_top50_41_ohe\n",
-      "ciudad_top50_42_ohe\n",
-      "ciudad_top50_43_ohe\n",
-      "ciudad_top50_44_ohe\n",
-      "ciudad_top50_45_ohe\n",
-      "ciudad_top50_46_ohe\n",
-      "ciudad_top50_47_ohe\n",
-      "ciudad_top50_48_ohe\n",
-      "ciudad_top50_49_ohe\n",
-      "ciudad_top50_50_ohe\n",
-      "ciudad_cara\n",
-      "ciudad_barata\n",
-      "ciudad_normal\n",
-      "ciudad_me_m1\n",
-      "ciudad_me_m2\n",
-      "ciudad_me_m3\n",
-      "ciudad_me_m4\n",
-      "dic2016\n",
-      "aniomes_me_m0\n",
-      "jardin\n",
-      "vigilancia\n",
-      "calefaccion\n",
-      "parrilla\n",
-      "terraza\n",
-      "servicio\n",
-      "metroscubiertos_city_mean\n",
-      "metroscubiertos_city_std\n",
-      "metroscubiertos_tipo_mean\n",
-      "metroscubiertos_tipo_std\n",
-      "hab_binning_me_m0\n",
-      "hab_binning_me_m1\n",
-      "hab_binning_me_m2\n",
-      "hab_binning_me_m3\n",
-      "hab_binning_me_m4\n",
-      "antiguedad_binning_1_ohe1\n",
-      "antiguedad_binning_2_ohe1\n",
-      "antiguedad_binning_3_ohe1\n",
-      "antiguedad_binning_4_ohe1\n",
-      "antiguedad_binning_5_ohe1\n",
-      "antiguedad_binning_6_ohe1\n",
-      "antiguedad_binning_7_ohe1\n",
-      "antiguedad_binning_8_ohe1\n",
-      "antiguedad_binning_9_ohe1\n",
-      "usd_precio_promedio_mensual\n",
-      "usd_subio\n",
-      "volcan_cerca\n",
-      "idzona_meanencoding_m0\n",
-      "idzona_meanencoding_m1\n",
-      "idzona_meanencoding_m4\n",
-      "apto_chicos\n",
-      "full\n",
-      "mean_city_sqrm_price\n",
-      "precio\n"
-     ]
-    }
-   ],
-   "source": [
-    "for columna in train_selected:\n",
-    "    print(columna)"
    ]
   },
   {
