--- a/parameter_tuning.ipynb
+++ b/parameter_tuning.ipynb
@@ -46,8 +46,7 @@
     "import pre_processing\n",
     "import feature_generation\n",
     "import feature_selection\n",
-    "import parameter_tuning\n",
-    "import predict"
+    "import parameter_tuning"
    ]
   },
   {
