--- a/main.ipynb
+++ b/main.ipynb
@@ -1649,17 +1649,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.neighbors import KNeighborsRegressor\n",
-    "from sklearn.impute import SimpleImputer"
+    "from sklearn.impute import SimpleImputer\n",
+    "from sklearn.preprocessing import MinMaxScaler"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1668,7 +1669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1678,7 +1679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1688,7 +1689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1697,7 +1698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1706,7 +1707,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sc = MinMaxScaler()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = sc.fit_transform(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1715,7 +1734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1724,7 +1743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1735,7 +1754,7 @@
        "                    weights='uniform')"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1746,7 +1765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1755,16 +1774,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "809110.8316791666"
+       "750980.8806958334"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3133,13 +3152,7 @@
       "[12:53:27] INFO: /workspace/src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 2040 extra nodes, 0 pruned nodes, max_depth=15\n",
       "[12:53:29] INFO: /workspace/src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 1330 extra nodes, 0 pruned nodes, max_depth=15\n",
       "[12:53:30] INFO: /workspace/src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 1568 extra nodes, 0 pruned nodes, max_depth=15\n",
-      "[12:53:32] INFO: /workspace/src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 2534 extra nodes, 0 pruned nodes, max_depth=15\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "[12:53:32] INFO: /workspace/src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 2534 extra nodes, 0 pruned nodes, max_depth=15\n",
       "[12:53:34] INFO: /workspace/src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 3502 extra nodes, 0 pruned nodes, max_depth=15\n",
       "[12:53:36] INFO: /workspace/src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 2182 extra nodes, 0 pruned nodes, max_depth=15\n",
       "[12:53:37] INFO: /workspace/src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 1264 extra nodes, 0 pruned nodes, max_depth=15\n",
@@ -3202,13 +3215,7 @@
       "[12:55:18] INFO: /workspace/src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 1484 extra nodes, 0 pruned nodes, max_depth=15\n",
       "[12:55:19] INFO: /workspace/src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 1018 extra nodes, 0 pruned nodes, max_depth=15\n",
       "[12:55:21] INFO: /workspace/src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 1446 extra nodes, 0 pruned nodes, max_depth=15\n",
-      "[12:55:22] INFO: /workspace/src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 1654 extra nodes, 0 pruned nodes, max_depth=15\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "[12:55:22] INFO: /workspace/src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 1654 extra nodes, 0 pruned nodes, max_depth=15\n",
       "[12:55:24] INFO: /workspace/src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 1440 extra nodes, 0 pruned nodes, max_depth=15\n",
       "[12:55:25] INFO: /workspace/src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 758 extra nodes, 0 pruned nodes, max_depth=15\n",
       "[12:55:26] INFO: /workspace/src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 408 extra nodes, 0 pruned nodes, max_depth=15\n",
@@ -3911,7 +3918,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
